[package]
name = "spaceport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
objc2 = "0.5.2"
objc2-core-location = { version = "0.2.2", features = ["CLLocationManagerDelegate", "CLLocationManager"] }
objc2-core-wlan = { version = "0.2.2", features = ["CWWiFiClient", "CWInterface"] }
objc2-foundation = "0.2.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
